syntax = "proto3";

package bpa;

service cla_sink {
    rpc RegisterCla(RegisterClaRequest) returns (RegisterClaResponse);
    rpc UnregisterCla(UnregisterClaRequest) returns (UnregisterClaResponse);
    rpc ForwardBundle(ForwardBundleRequest) returns (ForwardBundleResponse);
}

message RegisterClaRequest {
    string Name = 1;
    string Ident = 2;
    string GrpcAddress = 3;
}

message RegisterClaResponse {
}

message UnregisterClaRequest {
    string Name = 1;
}

message UnregisterClaResponse {
}

message ForwardBundleRequest {
    string Name = 1;
    bytes RemoteAddress = 2;
    bytes Bundle = 3;
}

message ForwardBundleResponse {
}
